[package]
name = "ockam_transport"
version = "0.1.0"
authors = ["Ockam Developers"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/ockam-network/ockam"
repository = "https://github.com/ockam-network/ockam/implementations/rust/ockam/ockam_transport"
readme = "README.md"
keywords = ["ockam", "ockam-transport"]
categories = ["network-programming", "asynchronous"]
description = """
Transport types for the Ockam Routing Protocol.
"""
exclude = [
    "DEVELOP.md",
    "LICENSE"
]
autoexamples = false

[features]
default = ["std"]
std = []

[dependencies]
ockam_core = {path = "../ockam_core", version = "*"}
ockam_router = {path = "../ockam_router", version = "*"}
async-trait = "0.1.42"
