[package]
name = "ockam_transport_websocket"
version = "0.1.0"
authors = ["Ockam Developers"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/ockam-network/ockam"
repository = "https://github.com/ockam-network/ockam/implementations/rust/ockam/ockam_transport_websocket"
readme = "README.md"
keywords = ["ockam", "websocket", "ockam-transport"]
categories = ["network-programming", "asynchronous"]
description = """
WebSocket Transport for the Ockam Routing Protocol.
"""
exclude = [
    "DEVELOP.md",
    "LICENSE"
]
autoexamples = false

[features]
default = ["std"]
std = []

[dependencies]
ockam_router = {path = "../ockam_router", version = "*"}
ockam_transport = {path = "../ockam_transport", version = "*"}
async-trait = "0.1.42"
async-tungstenite = {version = "0.13", features = ["tokio-runtime"]}
futures = " 0.3.12"
tokio = {version = "1.1.0", features = ["rt-multi-thread", "sync", "net", "macros"]}
url = "2.2.1"

[dev-dependencies]
trybuild = {version = "1.0.38", features = ["diff"]}